# db-from-scratch

./: .gitignore  CMakeLists.txt  Cargo.toml  main.cpp
crates/sql_jr_execution/: Cargo.toml
crates/sql_jr_execution/src/: error.rs  lib.rs  row.rs  table.rs
crates/sql_jr_parser/: Cargo.toml
crates/sql_jr_parser/src/: lib.rs  parse.rs  value.rs
crates/sql_jr_parser/src/commands/: ast.rs  create.rs  insert.rs  mod.rs  select.rs
crates/sql_jr_repl/: Cargo.toml
crates/sql_jr_repl/src/: main.rs
db-from-scratch/: Cargo.toml
db-from-scratch/src/: main.rs
