[package]
name = "sql_jr_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = { version = "0.4.1", features = ["serde"] }
miette = { workspace = true, features = ["fancy"] }
nom = "7.1.3"
nom-supreme = "0.8.0"
nom_locate = "4.1.0"
serde = { workspace = true }
thiserror = { workspace = true }
